css/layout.css
body {
	background: #fff;
	font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
	color: #444;
	-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
	-webkit-text-size-adjust: 100%;
}

.alert-delete-timestamp, .alert-add-video, .alert-manage-categories, .alert-delete-video { display: none; }



/* modals */
.modal {
    color: black;
    text-align: left;
    vertical-align: top;
}

/*

	#SPRITE
	#ICONS

*/

.sprite { 
	display: block; 
	background: url(/static/sprite.png) 0 0 no-repeat;
	position: relative; 
	z-index: 99; 
}

.folder {
	width: 10px;
	height: 8px;
	background-position: 0 -120px;
}

.loop-column, .del-column { position: relative; }

.loop-start {
	width: 20px;
	height: 20px;
	margin: 3px 0 0 -10px;
	position: relative;
	left: 50%;
	z-index: 99;
	background-position: 0px -40px;
}


.loop-column, .del-column { position: relative; }

.loop-start {
	width: 20px;
	height: 20px;
	margin: 3px 0 0 -10px;
	position: relative;
	left: 50%;
	z-index: 99;
	background-position: 0px -40px;
}

.line-horz {
	display: none;
	position: absolute;
	top: 50%;
	left: 20px;
	margin-top: -1px;
	width: 10px;
	height: 1px;
	background: #000;
}

.line-vert {
	display: none;
	position: absolute;
	top: 20px;
	left: 50%;
	z-index: -1;
	width: 1px;
	background: #000;
}

.loop-start:hover, .loop-start.active { background-position: -20px -40px; cursor: pointer; }
.loop-start.active:hover { background-position: -60px -40px; }
.loop-start:hover .line-horz, .loop-end:hover .line-horz { display: block; }
.loop-start.active .line-horz, .loop-end.active .line-horz { display: block; }
.loop-start.active .line-vert { display: block; }

.loop-end {
	width: 20px;
	height: 20px;
	margin: 4px 0 0 -10px;
	position: relative;
	left: 50%;
	z-index: 99;
	background-position: 0px -20px;
}

.loop-end:hover, .loop-end.active { background-position: -40px -40px; cursor: pointer; }
.loop-end.active:hover    { background-position: -60px -40px; }

.trashcan {
	width: 10px;
	height: 10px;
	background-position: -40px -80px;
}

.trashcan:hover { background-position: -60px -80px; cursor: pointer; }

.volume-wheel {
	width: 22px;
	height: 50px;
	background-position: 0 -160px;
}

.play, .pause {
	width: 8px;
	height: 8px;
}
.play  { background-position:   0   -240px; }
.pause { background-position: -20px -240px; }

.back30, .back5, .forward5, .forward30 {
	height: 5px;
	position: absolute;
	top: 50%;
	margin-top: -2px;
}

.back30    { width: 7px; left:  18px; background-position:   0   0; }
.back5     { width: 3px; left:  18px; background-position: -20px 0; }
.forward5  { width: 3px; right: 18px; background-position: -40px 0; }
.forward30 { width: 7px; right: 18px; background-position: -60px 0; }

.star, .star.active:hover {
	width: 15px;
	height: 14px;
	z-index: 99;
	background-position: 0px -80px;
}

.star:hover, .star.active {
	background-position: -20px -80px;	
	cursor: pointer;
}

/*

	

*/

header {
	width: 100%;
	height: 40px;
	background: #232323;
}

header .logo {
	margin-top: 10px;
}

header div {
	text-align: right;
	color: #fff;
	font-size: 12px;
    height: 43px;
	line-height: 39px;
}

header h3 {
    font-size: 14px;
    vertical-align: middle;
    margin: 0;
}

header .buttons a {
    padding-right: 40px;
}

header a, header a:visited,
header h3, header input[type="submit"]
{
    display: inline-block;
    vertical-align: middle;
    text-decoration: none;
    color: #fff !important;
    padding-left: 5px;
    padding-right: 5px;
    cursor: pointer;
}
header a:hover, header a:focus,
header input[type="submit"]:hover, header input[type=submit]:hover
{
    color: #0099ff !important;
}

.add-video {
    display: block;
	color: #fff;
	text-align: center;
}

.video-category {
	margin-top: 6px;
}

/*

	#DROPDOWN

*/

.dropdown {
	position: relative;
	cursor: pointer;
	text-align: left;
	border-radius: 3px;
}

.dropdown .folder {
	float: left;
	display: none;
	margin: 6px 6px 0 0;
}

.dropdown .category {
	display: block;
	height: 20px;
	font-size: 12px;
	line-height: 20px;
	margin-top: 4px;
}

.dropdown ul {
	display: none;
	width: 100%;
	position: absolute;
	top: 20px;
	z-index: 99;
	margin: 0;
	padding: 5px 0;
	background: #000;
	outline: 1px solid #fff;
}
.dropdown:hover ul { display: block; }

.dropdown ul li { margin: 0; padding: 0; }

.dropdown ul li a {
	display: block;
	margin: 0;
	padding: 5px 10px;
	color: #fff;
	text-decoration: none;
}

.dropdown ul li a:hover {
	color: #0099ff;
}

.dropdown .down-arrow {
	
	position: absolute;
	top: 50%;
	right: 0;
	margin: -3px 0 0 10px;
	width: 0; 
	height: 0; 
	border-left: 3px solid transparent;
	border-right: 3px solid transparent;
	border-top: 5px solid #000;
}

.dropdown.black {
	background: #000;
}

.dropdown.black .category {
	color: #fff;
	padding: 0 10px;
}

.dropdown.black .down-arrow {
	border-top: 5px solid #fff;
	right: 5px;
}

/*

	#VIDEO+CONTROLS

*/

#video {
	width: 700px;
	float: left;
	margin: 0;
	padding: 0;
    padding-bottom: 10px;
}

.video-box { float: left; position: relative; z-index: 1; }


.volume-control {
    display: block;
	width: 30px;
	height: 100%;
	position: absolute;
	left: -31px;
	top: 0;
	overflow: hidden;
}

.volume-bar-box {
	height: 475px;
	overflow: hidden;
}

.volume-bar {
	width: 3px;
	height: 475px;
	border-left: 11px solid #fff;
	border-right: 11px solid #fff;
	border-top: 475px solid transparent;
	/*                                 volume percentage |here|        */
	background: -webkit-linear-gradient(bottom, rgb(0,0,0) 80%, rgb(242,242,242) 0%, rgb(242,242,242) 100%);
	background: -moz-linear-gradient(bottom, rgb(0,0,0) 80%, rgb(242,242,242) 0%, rgb(242,242,242) 100%);
	background: linear-gradient(bottom, rgb(0,0,0) 80%, rgb(242,242,242) 0%, rgb(242,242,242) 100%);
	/* rough edges fix: */
	-webkit-transform: rotate(0.01deg);
	-moz-transform: rotateY(0.001turn);
	transform: rotateY(0.001turn);

    opacity: 0;
}

.volume-bar:hover { opacity: 1; }


.volume-control .volume-wheel {
	position: absolute;
    top: 478px;
}

.transport {
	float: left;
	width: 100%;
	height: 35px;
	overflow: hidden;
	margin-top: 2px;
	background: -webkit-linear-gradient(left, rgb(255,255,255) 10%, rgb(51,51,51) 10%, rgb(51,51,51) 90%, rgb(255,255,255) 90%);
	background: -moz-linear-gradient(left, rgb(255,255,255) 10%, rgb(51,51,51) 10%, rgb(51,51,51) 90%, rgb(255,255,255) 90%);
	background: linear-gradient(left, rgb(255,255,255) 10%, rgb(51,51,51) 10%, rgb(51,51,51) 90%, rgb(255,255,255) 90%);


}

.transport button {
	float: left;
	position: relative;
	height: 35px;
	margin: 0;
	padding: 0 18px;
	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
	border-radius: 0px;
	border-right: 2px solid #fff;
}

.transport .help-txt {
	float: left;
	color: #fff;
	padding: 12px 10px;

    height: 13px;
    line-height: 13px;

    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;

    width: 270px;

    font-family: 'Ubuntu Mono';
    font-size: 13px;
}

button.rew30, button.rew5 { padding-left: 28px; }
button.ffw30, button.ffw5 { padding-right: 28px; }

.transport > button:first-child {
	-webkit-border-bottom-left-radius: 3px;
	-moz-border-bottom-left-radius: 3px;
	border-bottom-left-radius: 3px;
}

.transport > button:last-child {
	-webkit-border-bottom-right-radius: 3px;
	-moz-border-bottom-right-radius: 3px;
	border-bottom-right-radius: 3px;
	border-right: 0;
	border-left: 2px solid #fff;
}

.transport button.add-timestamp { float: right; }


/*

	#TIMESTAMP LIST

*/

.timestamp-list { overflow: hidden; }

.timestamp-list .one.column {
	text-align: center;
}

.timestamp-list h3 {
	color: #666;
	font-size: 11px;
	line-height: 35px;
	width: 100%;
	text-align: center;
}

.timestamp-list h3.label { text-align: left; }

.timestamp-list .row {
	float: left;
	height: 25px;
	line-height: 25px;
	margin: 0;
	padding: 4px 0;
	border-bottom: 1px solid #eee;
}

.timestamp-list p {
	margin: 0;
	padding: 0;
	font-size: 14px;
	height: 25px;
	line-height: 25px;
	overflow: hidden;
}

.timestamp-list .trashcan {
	margin: 7px 0 0 -5px;
	position: relative;
	left: 50%;
	z-index: 2;
}

.timestamp {
	display: block;
	width: 100%;
	height: 25px;
	padding: 0;
	margin: 0;
	border: 1px solid #000;
	background: none;
	color: #000;
}

.timestamp.inactive {
	color: #ccc;
	border: 1px solid #ccc;
}
.timestamp.inactive:hover {
	color: #ccc;
	background: none;
	border: 1px solid #ccc;	
}

/*

	#CREDITS

*/

.credits {
	padding-top: 10px;
}

.credits p {
	float: left;
}

.credits ul {
	float: right;
}

.credits ul li {
	display: inline-block;
	margin-left: 5px;
}



/*

	#SIDEBAR

*/

.sidebar {
	position: relative;
	text-align: center;
}

.sidebar .browse {
	position: relative;
	right: 50%;
	margin: 6px 0 10px 65%;
	background: #fff;
}

.sidebar .row { 
	width: 100%;
	height: 105px;
	margin: 0 0 5px 0;
	float: left;
}

.sidebar a img {
	width: 140px;
	height: 105px;
	margin: 0;
	position: relative;
	z-index: 9;
}

.sidebar .star {
	display: none;
	position: absolute;
	top: 50%;
	left: 13px;
	margin: -7px 0 0 0;
}

.sidebar .star.active {
	display: block;
}

.sidebar .trashcan {
	display: none;
	position: absolute;
	top: 50%;
	right: 13px;
	margin: -5px 0 0 0;
}

.sidebar .row:hover .star, .sidebar .row:hover .trashcan { display: block; }

.sidebar-bg {
	width: 100%;
	position: absolute;
	top: 0;
	z-index: -1;
	background: url(static/dot-pattern.gif) 0 0 repeat;
	border-left: 1px solid #ccc;
	border-right: 1px solid #ccc;
}




	/* Smaller than standard 960 (devices and browsers) */
	@media only screen and (max-width: 959px) {

		.video { width: 556px; }

		.sidebar { width: 170px; }

		.sidebar .row { 
			width: 100%;
			height: 75px;
			margin: 0 0 5px 0;
			float: left;
		}

		.sidebar a img {
			width: 100px;
			height: 75px;
			margin: 0;
			position: relative;
			z-index: 9;
		}

		.help-txt { display: none; }

	}

	/* Tablet Portrait size to standard 960 (devices and browsers) */
	@media only screen and (min-width: 768px) and (max-width: 959px) {}

	/* All Mobile Sizes (devices and browser) */
	@media only screen and (max-width: 767px) {}

	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
	@media only screen and (min-width: 480px) and (max-width: 767px) {}

	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
	@media only screen and (max-width: 479px) {}





	

